--- a/Samples/AMoAdNativeListViewIconText/AMoAdNativeListViewIconText/Base.lproj/Main.storyboard
+++ b/Samples/AMoAdNativeListViewIconText/AMoAdNativeListViewIconText/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="105" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="G1c-JU-f2e">
-                                <rect key="frame" x="0.0" y="98" width="600" height="502"/>
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="BYZ-38-t0r" id="J9e-cq-242"/>
@@ -27,10 +27,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="G1c-JU-f2e" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="NgK-Lx-CHT"/>
-                            <constraint firstItem="G1c-JU-f2e" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="POB-1U-8yf"/>
-                            <constraint firstItem="G1c-JU-f2e" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="78" id="Uue-Qd-j2h"/>
-                            <constraint firstAttribute="trailing" secondItem="G1c-JU-f2e" secondAttribute="trailing" id="t74-E5-FTS"/>
+                            <constraint firstAttribute="trailing" secondItem="G1c-JU-f2e" secondAttribute="trailing" id="MMy-eY-RKf"/>
+                            <constraint firstItem="G1c-JU-f2e" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="k8w-NJ-z1F"/>
+                            <constraint firstItem="G1c-JU-f2e" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="nVe-je-vRt"/>
+                            <constraint firstItem="G1c-JU-f2e" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="qe7-fd-f6a"/>
                         </constraints>
                     </view>
                     <connections>
