--- a/Samples/Native/AMoAdNativeCollectionViewIconText/AMoAdNativeCollectionViewIconText/AdIconTextCollectionViewCell.xib
+++ b/Samples/Native/AMoAdNativeCollectionViewIconText/AMoAdNativeCollectionViewIconText/AdIconTextCollectionViewCell.xib
@@ -1,13 +1,17 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8164.2" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2657" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8135.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="49W-Ms-IdA">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AdCell" id="49W-Ms-IdA">
             <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -23,19 +27,9 @@
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="タイトルショート" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FZC-Rw-xhL">
                         <rect key="frame" x="4" y="78" width="80" height="12"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="21" id="aOq-5o-dcn"/>
-                            <constraint firstAttribute="width" constant="190" id="kQf-7B-fpl"/>
-                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="aOq-5o-dcn"/>
-                                <exclude reference="kQf-7B-fpl"/>
-                            </mask>
-                        </variation>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" tag="5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="サービス名" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gf4-0o-ZFj">
                         <rect key="frame" x="4" y="64" width="50" height="12"/>
@@ -44,16 +38,17 @@
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
-                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstAttribute="trailing" secondItem="FZC-Rw-xhL" secondAttribute="trailing" constant="16" id="2kj-De-kLr"/>
+                <constraint firstAttribute="trailing" secondItem="gf4-0o-ZFj" secondAttribute="trailing" constant="46" id="4JW-qL-vyF"/>
                 <constraint firstItem="PO6-XF-sLY" firstAttribute="top" secondItem="49W-Ms-IdA" secondAttribute="top" constant="2" id="JPu-JE-897"/>
-                <constraint firstItem="gf4-0o-ZFj" firstAttribute="top" secondItem="PO6-XF-sLY" secondAttribute="bottom" constant="2" id="Mlb-2n-dp6"/>
-                <constraint firstItem="FZC-Rw-xhL" firstAttribute="top" secondItem="gf4-0o-ZFj" secondAttribute="bottom" constant="2" id="Y4e-tb-gqD"/>
+                <constraint firstItem="gf4-0o-ZFj" firstAttribute="leading" secondItem="49W-Ms-IdA" secondAttribute="leading" constant="4" id="Ksa-Vh-Xw6"/>
+                <constraint firstItem="gf4-0o-ZFj" firstAttribute="leading" secondItem="FZC-Rw-xhL" secondAttribute="leading" id="Lf6-80-AI6"/>
                 <constraint firstItem="PO6-XF-sLY" firstAttribute="leading" secondItem="49W-Ms-IdA" secondAttribute="leading" constant="2" id="cxS-Hr-Qfo"/>
-                <constraint firstItem="FZC-Rw-xhL" firstAttribute="leading" secondItem="49W-Ms-IdA" secondAttribute="leading" constant="4" id="gFQ-cW-rPC"/>
-                <constraint firstItem="gf4-0o-ZFj" firstAttribute="leading" secondItem="49W-Ms-IdA" secondAttribute="leading" constant="4" id="ip7-UM-hln"/>
+                <constraint firstItem="gf4-0o-ZFj" firstAttribute="top" secondItem="PO6-XF-sLY" secondAttribute="bottom" constant="2" id="fHJ-gX-FyX"/>
+                <constraint firstItem="FZC-Rw-xhL" firstAttribute="top" secondItem="gf4-0o-ZFj" secondAttribute="bottom" constant="2" id="yZ4-Ro-JJn"/>
             </constraints>
             <size key="customSize" width="501" height="257"/>
             <point key="canvasLocation" x="313" y="280"/>
