--- a/Samples/NativeAfiO/AMoAdNativeAfiO/AMoAdNativeAfiO/AfioView.xib
+++ b/Samples/NativeAfiO/AMoAdNativeAfiO/AMoAdNativeAfiO/AfioView.xib
@@ -36,7 +36,7 @@
                         <constraint firstAttribute="width" secondItem="mfr-vM-FqS" secondAttribute="height" multiplier="640:100" id="5Ji-Fy-Y6d"/>
                     </constraints>
                     <state key="normal" image="button.png"/>
-                    <state key="highlighted" image="button_hilighted.png"/>
+                    <state key="highlighted" image="button_highlighted.png"/>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" tag="4" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ロングテキスト" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lnr-Nc-j6c">
                     <rect key="frame" x="8" y="8" width="359" height="229.5"/>
@@ -76,6 +76,6 @@
     </objects>
     <resources>
         <image name="button.png" width="640" height="100"/>
-        <image name="button_hilighted.png" width="640" height="100"/>
+        <image name="button_highlighted.png" width="640" height="100"/>
     </resources>
 </document>
